tests/negative/typecheck/int-assign.orng
fn main() -> Int {
    0 = 0
    0
}